Getting the unit tests to run on a real iOS device
* Code-sign the test bundle and fix a dead-stripping linker error
* Set up the right env variables in the scheme's Debug section
* Make the SSL ChangeTracker test ignore the SSL hostname mismatch in
  the server cert
* Fewer iterations in DB ConcurrentWrites test; it takes too long on a
  device
* Prevent a crash on test failure

--- a/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL iOS Test App.xcscheme
+++ b/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL iOS Test App.xcscheme
@@ -39,7 +39,7 @@
    <TestAction
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldUseLaunchSchemeArgsEnv = "NO"
       buildConfiguration = "Debug">
       <Testables>
          <TestableReference
@@ -62,6 +62,24 @@
             ReferencedContainer = "container:CouchbaseLite.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-Log YES"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "CBL_TEST_SERVER"
+            value = "http://jens.local:4984/"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "CBL_SSL_TEST_SERVER"
+            value = "https://jens.local:4994/"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </TestAction>
    <LaunchAction
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
@@ -120,26 +138,6 @@
             isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
-      <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "CBL_TEST_SERVER"
-            value = "http://NAME:PASS@HOST.local:5984/"
-            isEnabled = "NO">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "CBL_TEST_REALM"
-            value = "CouchDB"
-            isEnabled = "NO">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "CBL_TEST_USERNAME"
-            isEnabled = "NO">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "CBL_TEST_PASSWORD"
-            isEnabled = "NO">
-         </EnvironmentVariable>
-      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
