--- a/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL iOS Test App.xcscheme
+++ b/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL iOS Test App.xcscheme
@@ -46,6 +46,16 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "27139BA118F8EE3A0021A9A3"
+               BuildableName = "CBForest-iOS Tests.xctest"
+               BlueprintName = "CBForest-iOS Tests"
+               ReferencedContainer = "container:vendor/CBForest/CBForest.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "2700358A1A44E9270015B9F4"
                BuildableName = "CBL iOS Unit Tests.xctest"
                BlueprintName = "CBL iOS Unit Tests"
