Storage implementations now linked into separate static libraries
There are two important new build products: libCBLSQLiteStorage.a and
libCBLForestDBStorage.a. Any app using Couchbase Lite *MUST* link one
or both of those! If not, it will build but will throw an exception
as soon as it tries to open or create a database.
(This only applies to iOS! Mac OS X builds both storage engines into
CouchbaseLite.framework.)
Fixes #572

--- a/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL iOS Test App.xcscheme
+++ b/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL iOS Test App.xcscheme
@@ -77,17 +77,21 @@
             argument = "-Log YES"
             isEnabled = "YES">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-CBLStorageType ForestDB"
+            isEnabled = "NO">
+         </CommandLineArgument>
       </CommandLineArguments>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "CBL_TEST_SERVER"
-            value = "http://jens.local:4984/"
-            isEnabled = "YES">
+            value = "http://localhost:4984/"
+            isEnabled = "NO">
          </EnvironmentVariable>
          <EnvironmentVariable
             key = "CBL_SSL_TEST_SERVER"
-            value = "https://jens.local:4994/"
-            isEnabled = "YES">
+            value = "https://localhost:4994/"
+            isEnabled = "NO">
          </EnvironmentVariable>
       </EnvironmentVariables>
    </TestAction>
