Fixed unit tests not being able to run on iOS devices
The CBForest tests are considered "logic tests" because they don't have
an associated iOS app executable to run in; and that means they can't
run on a real device.
To resolve this I made the CBL iOS Test App scheme stop invoking the
CBForest tests. Instead, I added the CBForest test classes' source code
to the CBL iOS Tests target so they'll run along with the rest of the
CBL unit tests.
This should fix the Xcode unit-test bot (fingers crossed!)

--- a/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL iOS Test App.xcscheme
+++ b/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL iOS Test App.xcscheme
@@ -46,16 +46,6 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "27139BA118F8EE3A0021A9A3"
-               BuildableName = "CBForest-iOS Tests.xctest"
-               BlueprintName = "CBForest-iOS Tests"
-               ReferencedContainer = "container:vendor/CBForest/CBForest.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
                BlueprintIdentifier = "2700358A1A44E9270015B9F4"
                BuildableName = "CBL iOS Unit Tests.xctest"
                BlueprintName = "CBL iOS Unit Tests"
@@ -105,7 +95,8 @@
       debugDocumentVersioning = "YES"
       debugXPCServices = "NO"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "27B0B80A1492C16300A817AD"
@@ -161,7 +152,8 @@
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "27B0B80A1492C16300A817AD"
