Added new BLIP replicator

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "vendor/fmdb"]
 	path = vendor/fmdb
 	url = git://github.com/couchbaselabs/fmdb.git
+[submodule "vendor/BLIP"]
+	path = vendor/BLIP
+	url = git@github.com:couchbaselabs/BLIP-Cocoa.git
