Forbid warnings in unit tests by making them throw exceptions
Unit tests now enable the gMYWarnRaisesException flag, which causes the
Warn() function to raise an exception.
If a test needs to trigger a warning (like deliberately causing an
error) it can use the -allowWarningsIn: method that disables this
behavior while running the given block.

--- a/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL Mac.xcscheme
+++ b/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL Mac.xcscheme
@@ -74,12 +74,16 @@
       </MacroExpansion>
       <CommandLineArguments>
          <CommandLineArgument
+            argument = "-TestNewReplicator YES"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "-Log YES"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-LogSyncVerbose YES"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
       <EnvironmentVariables>
@@ -89,6 +93,8 @@
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       selectedDebuggerIdentifier = ""
@@ -99,6 +105,7 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugXPCServices = "NO"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <MacroExpansion>
          <BuildableReference
