Added Info.plist flag allowing iOS test app to make non-SSL connections
By default iOS 9 doesn't allow apps to make non-SSL HTTP connections.
Added a flag to override this because it of course breaks our tests.

--- a/Test-iOS/iOS Demo-Info.plist
+++ b/Test-iOS/iOS Demo-Info.plist
@@ -60,6 +60,11 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
