Compatibility with iOS 9 App Transport Security
* When validating server trust in the NSURLConnection callback, update
  the SecTrustRef to have a result of 'proceed', otherwise ATS will
  reject the connection even though I accepted the cert.
* Configured iOS test app to accept non-forward-secrecy ciphers from
  the 'local' domain, so it can interoperate with iOS 8 or OS X 10.10
  whose SecureTransport implementations don't include the forward-secret
  ciphers.
* Updated MYAnonymousIdentity in MYUtilities to use SHA-256 when signing
  the cert. Added a unit test for it.
Fixes #816

--- a/Test-iOS/iOS Demo-Info.plist
+++ b/Test-iOS/iOS Demo-Info.plist
@@ -49,6 +49,19 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>local</key>
+			<dict>
+				<key>NSExceptionRequiresForwardSecrecy</key>
+				<false/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -60,11 +73,6 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-	</dict>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
