Added an auth-failure unit test and fixed some bugs
* Fixed cases where CBLRemoteRequest would try the same invalid credential
  multiple times.
* Prevent CBLRemoteRequest from trying a credential that has no
  associated password
* Added a timeout for replications in Replication_Tests.
* Added a unit test that tries to replicate with invalid credentials,
  both password-based an OAuth, and verifies that it immediately gets
  a 401 error with no delays or retries.

Fixes #841

--- a/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL Mac.xcscheme
+++ b/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL Mac.xcscheme
@@ -85,7 +85,7 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "-TestNewReplicator YES"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-Log YES"
