--- a/Source/CouchbaseLite-Info.plist
+++ b/Source/CouchbaseLite-Info.plist
@@ -6,8 +6,6 @@
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
-	<key>CFBundleIconFile</key>
-	<string></string>
 	<key>CFBundleIdentifier</key>
 	<string>com.couchbase.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -17,14 +15,12 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>${CBL_VERSION_STRING} (${CURRENT_PROJECT_VERSION})</string>
+	<string>${CBL_VERSION_STRING}</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>${CURRENT_PROJECT_VERSION}</string>
-	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2012-2015 Couchbase, Inc. All rights reserved.</string>
-	<key>NSPrincipalClass</key>
-	<string></string>
+	<string>${CURRENT_PROJECT_VERSION}.0.0</string>
+	<key>CFBundleGetInfoString</key>
+	<string>${CBL_VERSION_STRING}; Copyright © 2012-2016 Couchbase, Inc. All rights reserved.</string>
 </dict>
 </plist>
