--- a/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL Mac+SQLCipher.xcscheme
+++ b/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL Mac+SQLCipher.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2701C1681C4D5BDD006D7A99"
-               BuildableName = "CBL Mac+SQLCipher.framework"
+               BuildableName = "CouchbaseLite.framework"
                BlueprintName = "CBL Mac+SQLCipher"
                ReferencedContainer = "container:CouchbaseLite.xcodeproj">
             </BuildableReference>
@@ -44,7 +44,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2701C1681C4D5BDD006D7A99"
-            BuildableName = "CBL Mac+SQLCipher.framework"
+            BuildableName = "CouchbaseLite.framework"
             BlueprintName = "CBL Mac+SQLCipher"
             ReferencedContainer = "container:CouchbaseLite.xcodeproj">
          </BuildableReference>
@@ -66,7 +66,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2701C1681C4D5BDD006D7A99"
-            BuildableName = "CBL Mac+SQLCipher.framework"
+            BuildableName = "CouchbaseLite.framework"
             BlueprintName = "CBL Mac+SQLCipher"
             ReferencedContainer = "container:CouchbaseLite.xcodeproj">
          </BuildableReference>
@@ -84,7 +84,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2701C1681C4D5BDD006D7A99"
-            BuildableName = "CBL Mac+SQLCipher.framework"
+            BuildableName = "CouchbaseLite.framework"
             BlueprintName = "CBL Mac+SQLCipher"
             ReferencedContainer = "container:CouchbaseLite.xcodeproj">
          </BuildableReference>
