Fixed ForestDB view indexing of purged documents
The fixes are actually in CBForest. Here I've just updated two unit
tests to detect the problem(s).

Fixes #1164

--- a/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL Mac.xcscheme
+++ b/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL Mac.xcscheme
@@ -101,7 +101,7 @@
          <EnvironmentVariable
             key = "MallocScribble"
             value = ""
-            isEnabled = "YES">
+            isEnabled = "NO">
          </EnvironmentVariable>
       </EnvironmentVariables>
       <AdditionalOptions>
