--- a/xcconfigs/Mac library.xcconfig
+++ b/xcconfigs/Mac library.xcconfig
@@ -5,6 +5,7 @@
 // https://github.com/dempseyatgithub/BuildSettingExtractor
 //
 
+DEFINES_MODULE               = YES
 GCC_PREFIX_HEADER            = Source/CouchbaseLitePrefix.h
 HEADER_SEARCH_PATHS          = $(inherited) /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include $SRCROOT/vendor/yajl/build/yajl-2.0.5/include vendor/CBForest/C vendor/CBForest/vendor/forestdb/include/libforestdb vendor/CBForest/vendor/sqlite3-unicodesn vendor/BLIP/BLIP vendor/BLIP/vendor/PocketSocket/PocketSocket
 MACH_O_TYPE                  = staticlib
