Disable App Transport Security for Mac OS X LiteServ

--- a/LiteServ App/LiteServ App-Info.plist
+++ b/LiteServ App/LiteServ App-Info.plist
@@ -38,6 +38,8 @@
 				<true/>
 			</dict>
 		</dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2013-2016 Couchbase, Inc. All rights reserved.</string>
