Define sync protocol version for user-agent in source, not project config
Fixes #1044

--- a/xcconfigs/Project_Debug.xcconfig
+++ b/xcconfigs/Project_Debug.xcconfig
@@ -9,5 +9,5 @@
 
 ENABLE_TESTABILITY           = YES
 GCC_DYNAMIC_NO_PIC           = NO
-GCC_PREPROCESSOR_DEFINITIONS = DEBUG=1 CBL_SYNC_VERSION_STRING="\"$(CBL_SYNC_VERSION_STRING)\"" CBL_VERSION_STRING="\"$(CBL_VERSION_STRING)-Debug\"" CBL_SOURCE_REVISION="\"$(CBL_SOURCE_REVISION)\""
+GCC_PREPROCESSOR_DEFINITIONS = DEBUG=1 CBL_VERSION_STRING="\"$(CBL_VERSION_STRING)-Debug\"" CBL_SOURCE_REVISION="\"$(CBL_SOURCE_REVISION)\""
 GCC_OPTIMIZATION_LEVEL       = 0
