--- a/xcconfigs/Project_Release.xcconfig
+++ b/xcconfigs/Project_Release.xcconfig
@@ -7,7 +7,7 @@
 
 #include "Project.xcconfig"
 
-GCC_PREPROCESSOR_DEFINITIONS = CBL_SYNC_VERSION_STRING="\"$(CBL_SYNC_VERSION_STRING)\"" CBL_VERSION_STRING="\"$(CBL_VERSION_STRING)\"" CBL_SOURCE_REVISION="\"$(CBL_SOURCE_REVISION)\""
+GCC_PREPROCESSOR_DEFINITIONS = CBL_VERSION_STRING="\"$(CBL_VERSION_STRING)\"" CBL_SOURCE_REVISION="\"$(CBL_SOURCE_REVISION)\""
 
 GCC_OPTIMIZATION_LEVEL       = s
 
