Don't strip debug symbols from static libraries
Set STRIP_INSTALLED_PRODUCT = NO in targets that build static libraries.
Fixes #1327

--- a/xcconfigs/Listener iOS.xcconfig
+++ b/xcconfigs/Listener iOS.xcconfig
@@ -6,6 +6,7 @@
 //
 
 #include "iOS and tvOS.xcconfig"
+#include "StaticLibProduct.xcconfig"
 
 CONFIGURATION_BUILD_DIR      = $(UNIVERSAL_BUILD_DIR)
 INFOPLIST_FILE               = Source/CouchbaseLite-Info.plist
