--- a/xcconfigs/StaticLibProduct.xcconfig
+++ b/xcconfigs/StaticLibProduct.xcconfig
@@ -12,5 +12,9 @@
 // These should be turned off when building static libraries for
 // distribution (i.e. to be linked into an app on some other computer.)
 // Otherwise you get linker warnings or errors. (#1054)
-CLANG_ENABLE_MODULES = NO;
+CLANG_ENABLE_MODULES          = NO;
 CLANG_ENABLE_MODULE_DEBUGGING = NO;
+
+// Leave symbols in the static library, otherwise they won't appear in the app, and then
+// backtraces and crash reports wouldn't have CBL symbols in them.
+STRIP_INSTALLED_PRODUCT       = NO
