--- a/xcconfigs/iOS Test App.xcconfig
+++ b/xcconfigs/iOS Test App.xcconfig
@@ -7,6 +7,7 @@
 
 CODE_SIGN_IDENTITY                = iPhone Developer
 CODE_SIGN_IDENTITY[sdk=iphoneos*] = iPhone Developer
+DEAD_CODE_STRIPPING               = NO
 FRAMEWORK_SEARCH_PATHS            = $(inherited) "$(DEVELOPER_FRAMEWORKS_DIR)"
 GCC_PREFIX_HEADER                 = Test-iOS/iOS Demo-Prefix.pch
 INFOPLIST_FILE                    = Test-iOS/iOS Demo-Info.plist
