--- a/xcconfigs/tvOS Test App.xcconfig
+++ b/xcconfigs/tvOS Test App.xcconfig
@@ -12,3 +12,4 @@ LD_RUNPATH_SEARCH_PATHS                = $(inherited) @executable_path/Framework
 PRODUCT_NAME                           = $(TARGET_NAME)
 SDKROOT                                = appletvos
 TARGETED_DEVICE_FAMILY                 = 3
+DEAD_CODE_STRIPPING                    = NO
