--- a/xcconfigs/CBL ObjC.xcconfig
+++ b/xcconfigs/CBL ObjC.xcconfig
@@ -7,7 +7,6 @@
 
 CODE_SIGN_IDENTITY           = 
 DEFINES_MODULE               = YES
-DEVELOPMENT_TEAM             = N2Q372V7W2
 DYLIB_COMPATIBILITY_VERSION  = 1
 DYLIB_CURRENT_VERSION        = 1
 DYLIB_INSTALL_NAME_BASE      = @rpath
@@ -17,6 +16,7 @@ HEADER_SEARCH_PATHS          = $(SRCROOT)/vendor/couchbase-lite-core/C/include $
 INFOPLIST_FILE               = Objective-C/Info.plist
 INSTALL_PATH                 = $(LOCAL_LIBRARY_DIR)/Frameworks
 LD_RUNPATH_SEARCH_PATHS      = $(inherited) @executable_path/Frameworks @loader_path/Frameworks
+OTHER_LDFLAGS                = -ObjC
 PRODUCT_BUNDLE_IDENTIFIER    = com.couchbase.CouchbaseLite
 PRODUCT_NAME                 = CouchbaseLite
 SKIP_INSTALL                 = YES
