--- a/xcconfigs/Project_Release.xcconfig
+++ b/xcconfigs/Project_Release.xcconfig
@@ -7,7 +7,15 @@
 
 #include "Project.xcconfig"
 
-DEBUG_INFORMATION_FORMAT = dwarf-with-dsym
-ENABLE_NS_ASSERTIONS     = NO
-MTL_ENABLE_DEBUG_INFO    = NO
-VALIDATE_PRODUCT         = YES
+DEAD_CODE_STRIPPING             = YES                   // Strip dead code
+DEBUG_INFORMATION_FORMAT        = dwarf-with-dsym       // Debug symbols in external .dSYM file
+DEPLOYMENT_POSTPROCESSING       = YES                   // Enable symbol stripping
+ENABLE_NS_ASSERTIONS            = NO                    // Disable NSAssert
+ENABLE_TESTABILITY              = NO
+GCC_OPTIMIZATION_LEVEL          = s                     // s=Small, fast=Fastest
+GCC_PREPROCESSOR_DEFINITIONS    = NDEBUG=1 $(inherited) // NDEBUG is recognized by Unix headers
+LD_GENERATE_MAP_FILE            = YES                   // Generate link map, to analyze code size
+LLVM_LTO                        = YES                   // Link-time optimization FTW!
+MTL_ENABLE_DEBUG_INFO           = NO                    // ???
+STRIP_INSTALLED_PRODUCT         = YES                   // Strip debug symbols
+VALIDATE_PRODUCT                = YES                   // Perform validation checks on the product
