Moved Swift target build settings to xcconfig file

--- a/xcconfigs/Project_Release.xcconfig
+++ b/xcconfigs/Project_Release.xcconfig
@@ -18,4 +18,5 @@ LD_GENERATE_MAP_FILE            = YES                   // Generate link map, to
 LLVM_LTO                        = YES                   // Link-time optimization FTW!
 MTL_ENABLE_DEBUG_INFO           = NO                    // ???
 STRIP_INSTALLED_PRODUCT         = YES                   // Strip debug symbols
+SWIFT_OPTIMIZATION_LEVEL        = -Owholemodule
 VALIDATE_PRODUCT                = YES                   // Perform validation checks on the product
