--- a/xcconfigs/Project.xcconfig
+++ b/xcconfigs/Project.xcconfig
@@ -31,6 +31,8 @@ ENABLE_STRICT_OBJC_MSGSEND         = YES
 GCC_C_LANGUAGE_STANDARD            = gnu99
 GCC_NO_COMMON_BLOCKS               = YES
 
+SWIFT_VERSION = 3.0
+
 VERSION_INFO_PREFIX                = 
 VERSIONING_SYSTEM                  = apple-generic
 
