--- a/xcconfigs/Project_Debug.xcconfig
+++ b/xcconfigs/Project_Debug.xcconfig
@@ -13,3 +13,5 @@ GCC_OPTIMIZATION_LEVEL       = 0
 GCC_PREPROCESSOR_DEFINITIONS = DEBUG=1 $(inherited)
 MTL_ENABLE_DEBUG_INFO        = YES
 ONLY_ACTIVE_ARCH             = YES
+SWIFT_OPTIMIZATION_LEVEL     = -Onone
+SWIFT_ACTIVE_COMPILATION_CONDITIONS = DEBUG
