Update version in Info.plist and cleanup project settings
* Update version in Info.plist to 2.0DB2
* Cleanup project settings
* Minor update to Scripts/build_framework.sh

--- a/Objective-C/Info.plist
+++ b/Objective-C/Info.plist
@@ -15,9 +15,11 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.0DP001</string>
+	<string>2.0DB2</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2017 Couchbase. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
