Add a script to generate the release zip files
* Added Scripts/generate_release_zip.sh
* Added Scripts/Support/License/LICENSE_*.txt for release.
* Added CBL_VERSION_STRING in Xcode project file so that the version string can be set from the generate_release_zip.sh script.
* Adjusted platform output folder name and modified podspec accordingly

#1650

--- a/Objective-C/Info.plist
+++ b/Objective-C/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.0DB2</string>
+	<string>$(CBL_VERSION_STRING)</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSHumanReadableCopyright</key>
