--- a/xcconfigs/Project.xcconfig
+++ b/xcconfigs/Project.xcconfig
@@ -26,7 +26,7 @@ CLANG_ENABLE_OBJC_ARC              = YES
 
 COPY_PHASE_STRIP                   = NO
 
-DEVELOPMENT_TEAM                   = N2Q372V7W2
+DEVELOPMENT_TEAM                   = 
 
 ENABLE_STRICT_OBJC_MSGSEND         = YES
 
