Make sure code signing is disable by default

--- a/xcconfigs/Project.xcconfig
+++ b/xcconfigs/Project.xcconfig
@@ -11,6 +11,8 @@ IPHONEOS_DEPLOYMENT_TARGET         = 9.0
 MACOSX_DEPLOYMENT_TARGET           = 10.11
 TVOS_DEPLOYMENT_TARGET             = 9.0
 
+CODE_SIGN_IDENTITY                 =
+
 ONLY_ACTIVE_ARCH                   = NO
 SKIP_INSTALL                       = YES
 SUPPORTED_PLATFORMS                = macosx iphoneos iphonesimulator appletvos appletvsimulator
