--- a/xcconfigs/CBL ObjC.xcconfig
+++ b/xcconfigs/CBL ObjC.xcconfig
@@ -11,7 +11,7 @@ DYLIB_CURRENT_VERSION        = 1
 DYLIB_INSTALL_NAME_BASE      = @rpath
 GCC_PRECOMPILE_PREFIX_HEADER = YES
 GCC_PREFIX_HEADER            = $(SRCROOT)/Objective-C/Internal/CBLPrefix.h
-HEADER_SEARCH_PATHS          = $(SRCROOT)/vendor/couchbase-lite-core/C/include $(SRCROOT)/vendor/couchbase-lite-core/vendor/fleece/Fleece $(SRCROOT)/vendor/couchbase-lite-core/vendor/fleece/ObjC
+HEADER_SEARCH_PATHS          = $(SRCROOT)/vendor/couchbase-lite-core/C/include $(SRCROOT)/vendor/couchbase-lite-core/vendor/fleece/Fleece $(SRCROOT)/vendor/couchbase-lite-core/vendor/fleece/ObjC $(SRCROOT)/vendor/couchbase-lite-core/Replicator/Obj-C
 INFOPLIST_FILE               = Objective-C/Info.plist
 INSTALL_PATH                 = $(LOCAL_LIBRARY_DIR)/Frameworks
 LD_RUNPATH_SEARCH_PATHS      = $(inherited) @executable_path/Frameworks @loader_path/Frameworks
