--- a/xcconfigs/Project.xcconfig
+++ b/xcconfigs/Project.xcconfig
@@ -78,6 +78,7 @@ GCC_WARN_UNUSED_FUNCTION                                   = YES
 GCC_WARN_UNUSED_VARIABLE                                   = YES
 WARNING_CFLAGS                                             = -Wall -Wformat-security -Wmissing-declarations -Woverriding-method-mismatch -Weffc++
 
+CLANG_ADDRESS_SANITIZER_CONTAINER_OVERFLOW                 = YES    // range-check C++ STL containers
 
 // Static Analyzer - Analysis Policy
 RUN_CLANG_STATIC_ANALYZER                                  = YES // Run during 'Build' as well as 'Analyze'
