Use CLANG_WARN_UNGUARDED_AVAILABILITY to check for unavailable API calls
This is new in Xcode 9; it generates a warning if you call an API that
isn't available in the deployment-target OS version, without using a
runtime availability check.

It caught one use of an unavailable API, NSLocale.languageCode, which
I've replaced with a backwards-compatible equivalent call.

--- a/xcconfigs/Project.xcconfig
+++ b/xcconfigs/Project.xcconfig
@@ -40,6 +40,9 @@ SWIFT_VERSION                      = 3.2
 VERSION_INFO_PREFIX                = 
 VERSIONING_SYSTEM                  = apple-generic
 
+// Warn about using newer-than-deployment-target APIs without dynamic checks: (Xcode 9+)
+CLANG_WARN_UNGUARDED_AVAILABILITY = YES_AGGRESSIVE
+
 // Warnings:
 CLANG_ANALYZER_NONNULL                                     = YES
 CLANG_WARN_BLOCK_CAPTURE_AUTORELEASING                     = YES
