Updated & improved TunesPerfTest
* Now using collation API instead of lowercasing strings to compare
  them. (This means it's also diacritic-insensitive, which changes the
  results of some queries where multiple spellings of an artist name
  weren't being coalesced.)
* Runs the -queryAlbums: test before indexing as well as afterwards.
  It's *much* slower without an index.
* Reports insert and update times in docs/sec.
* Added a VERBOSE variable to control how much gets logged, for
  diagnostic purposes.

--- a/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/PerfTests - Mac.xcscheme
+++ b/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/PerfTests - Mac.xcscheme
@@ -26,6 +26,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
@@ -45,6 +46,8 @@
       buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      disableMainThreadChecker = "YES"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -61,18 +64,16 @@
             ReferencedContainer = "container:CouchbaseLite.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "LiteCoreLog"
-            value = "1"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "LiteCoreLogSQL"
-            value = "1"
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-CBLLogLevel verbose"
             isEnabled = "NO">
-         </EnvironmentVariable>
-      </EnvironmentVariables>
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-CBLLogSQL info"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
