--- a/Swift/Info.plist
+++ b/Swift/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>$(CBL_VERSION_STRING)</string>
 	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<string>$(CBL_BUILD_NUMBER)</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2017 Couchbase. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
