--- a/xcconfigs/Project_Release.xcconfig
+++ b/xcconfigs/Project_Release.xcconfig
@@ -14,7 +14,7 @@ STRIP_STYLE                     = non-global
 ENABLE_NS_ASSERTIONS            = NO                    // Disable NSAssert
 ENABLE_TESTABILITY              = NO
 GCC_OPTIMIZATION_LEVEL          = s                     // s=Small, fast=Fastest
-GCC_PREPROCESSOR_DEFINITIONS    = NDEBUG=1 $(inherited) // NDEBUG is recognized by Unix headers
+GCC_PREPROCESSOR_DEFINITIONS    = NDEBUG=1 CBL_VERSION_STRING="\"$(CBL_VERSION_STRING)\"" CBL_BUILD_NUMBER="$(CBL_BUILD_NUMBER)" CBL_PRODUCT_NAME="\"$(PRODUCT_NAME)\"" $(inherited) // NDEBUG is recognized by Unix headers
 LD_GENERATE_MAP_FILE            = YES                   // Generate link map, to analyze code size
 LLVM_LTO                        = YES                   // Link-time optimization FTW!
 MTL_ENABLE_DEBUG_INFO           = NO                    // ???
