--- a/xcconfigs/Project.xcconfig
+++ b/xcconfigs/Project.xcconfig
@@ -5,7 +5,7 @@
 // https://github.com/dempseyatgithub/BuildSettingExtractor
 //
 
-CBL_VERSION_STRING                 = 2.0DB017
+CBL_VERSION_STRING                 = 2.0.0
 CBL_BUILD_NUMBER                   = 0
 
 IPHONEOS_DEPLOYMENT_TARGET         = 9.0
