Fix unit tests for Mac and AppleTV
* Fixed test22c_SetCookieInHeader to always run with SSL (on Mac, it runs on non SSL previously).

* Added NSAppTransportSecurity to Apple TV Test’s info.plist to be able to run P2P tests and Replicator with SSL tests.

--- a/Test-tvOS/tvosDemo-Info.plist
+++ b/Test-tvOS/tvosDemo-Info.plist
@@ -28,5 +28,20 @@
 	<array>
 		<string>arm64</string>
 	</array>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+        <key>NSExceptionDomains</key>
+        <dict>
+            <key>local</key>
+            <dict>
+                <key>NSExceptionRequiresForwardSecrecy</key>
+                <false/>
+                <key>NSIncludesSubdomains</key>
+                <true/>
+            </dict>
+        </dict>
+    </dict>
 </dict>
 </plist>
