Xcode: Added EE configurations & xcconfig files.
* "Debug-EE" and "Release-EE" configurations are identical to "Debug"
  and "Release" except that they use the "Project-Debug-EE.xcconfig"
  and "Project-Release-EE.xcconfig" configuration files.
* Those config files override the preprocessor symbol settings to define
  COUCHBASE_ENTERPRISE, enabling enterprise feature & tests thereof.
* The matching "Debug-EE" and "Release-EE" configurations are used when
  building LiteCore, so it builds the EE version with encryption
  enabled.

--- a/xcconfigs/Project_Debug.xcconfig
+++ b/xcconfigs/Project_Debug.xcconfig
@@ -22,7 +22,7 @@
 DEBUG_INFORMATION_FORMAT     = dwarf
 ENABLE_TESTABILITY           = YES
 GCC_OPTIMIZATION_LEVEL       = 0
-GCC_PREPROCESSOR_DEFINITIONS = DEBUG=1 CBL_VERSION_STRING="\"$(CBL_VERSION_STRING)\"" CBL_BUILD_NUMBER="$(CBL_BUILD_NUMBER)" CBL_PRODUCT_NAME="\"$(PRODUCT_NAME)\"" $(inherited)
+GCC_PREPROCESSOR_DEFINITIONS = DEBUG=1 CBL_VERSION_STRING="\"$(CBL_VERSION_STRING)\"" CBL_BUILD_NUMBER="$(CBL_BUILD_NUMBER)" CBL_PRODUCT_NAME="\"$(PRODUCT_NAME)\"" $(EE_PP_DEFS) $(inherited)
 MTL_ENABLE_DEBUG_INFO        = YES
 ONLY_ACTIVE_ARCH             = YES
 SWIFT_OPTIMIZATION_LEVEL     = -Onone
