Fix Objective-C EE build
* Separated exported symbol file between CE and EE.
* Separated some header files between CE and EE. The EE header files are kept in the Objective-C/EE folder. As a workaround, the ee build script will copy the headers file from EE folder to Objective-C folder before building the binary. Need to explore the possibility of using build phase to do this.

--- a/xcconfigs/CBL ObjC_Release.xcconfig
+++ b/xcconfigs/CBL ObjC_Release.xcconfig
@@ -19,4 +19,4 @@
 
 #include "CBL ObjC.xcconfig"
 
-EXPORTED_SYMBOLS_FILE     = Objective-C/CouchbaseLite.exp
+EXPORTED_SYMBOLS_FILE     = $(CBL_EXPORTED_SYMBOLS_FILE)
