--- a/xcconfigs/Project_Release_EE.xcconfig
+++ b/xcconfigs/Project_Release_EE.xcconfig
@@ -8,3 +8,5 @@ EE_PP_DEFS = COUCHBASE_ENTERPRISE
 OTHER_SWIFT_FLAGS = -D$(EE_PP_DEFS)
 
 #include "Project_Release.xcconfig"
+
+CBL_EXPORTED_SYMBOLS_FILE = Objective-C/CouchbaseLiteEE.exp
