--- a/xcconfigs/CBL Swift.xcconfig
+++ b/xcconfigs/CBL Swift.xcconfig
@@ -22,4 +22,4 @@
 INFOPLIST_FILE               = Swift/Info.plist
 PRODUCT_BUNDLE_IDENTIFIER    = com.couchbase.CouchbaseLiteSwift
 PRODUCT_NAME                 = CouchbaseLiteSwift
-MODULEMAP_FILE               = Swift/CouchbaseLite.modulemap
+MODULEMAP_FILE               = Swift/CouchbaseLiteSwift.modulemap
