Enabled Undefined Behavior sanitizer, fixed 2 issues
* -[CBLDatabase initWithName:…] should return CBLErrorInvalidParameter,
  not CBLErrorWrongFormat, if the name is empty/nil.
* If the current process has no bundle ID, CBLDatabaseConfiguration’s
  defaultDirectory method would pass nil to
  stringByAppendingPathComponent, which is illegal, and ended up
  returning an undesirable result anyway. I changed it to detect this
  and return the current directory, which seems the most sensible
  thing to do.
* Added some missing ‘nullable’ annotations.

--- a/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL ObjC.xcscheme
+++ b/CouchbaseLite.xcodeproj/xcshareddata/xcschemes/CBL ObjC.xcscheme
@@ -28,6 +28,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       enableAddressSanitizer = "YES"
       enableASanStackUseAfterReturn = "YES"
+      enableUBSanitizer = "YES"
       shouldUseLaunchSchemeArgsEnv = "NO">
       <Testables>
          <TestableReference
